2008-11-04  Al Riddoch  <alriddoch@zepler.org>

	* ping/ping.cpp: Add the C includes required for strtoul(),
	  exit(3) and strerror() which should fix problems with more
	  recent compilers.

2007-04-28  Al Riddoch  <alriddoch@zepler.org>

	* skstream/skserver.cpp, skstream/skstream.cpp: Add includes required
	  for recent compilers which include less stuff implicitly in
	  standard headers.

2007-10-02  Al Riddoch  <alriddoch@zepler.org>

	* skstream/skstream.cpp: Fix the method definition for
	  unix_socket_stream::open().

2007-10-02  Al Riddoch  <alriddoch@zepler.org>

	* skstream/skstream_unix.h, skstream/skstream.cpp: Clean up the
	  code for unix sockets, and add an interface for setting up socketpair
	  style streams.

2007-09-22  Al Riddoch  <alriddoch@zepler.org>

	* test/basicskstreamtest.h, test/skservertest.h,
	  test/skstreamtestrunner.cpp, test/socketbuftest.h:
	  Remove some tests for methods that no longer exist in the given
	  classes.

2007-09-22  Al Riddoch  <alriddoch@zepler.org>

	* Doxyfile: Update to a more recent version.

	* skstream/skserver.h, skstream/sksocket.h: Add some quick
	  doc strings to classes, so the inheritance tree is apparant to
	  doxygen.

2007-09-02  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Remove the debian subdir from distribution.

2007-05-28  Al Riddoch  <alriddoch@zepler.org>

	* skstream/skstream.cpp: A much safer way of ensuring the address
	  length is correct, using sizeof.

2007-05-28  Al Riddoch  <alriddoch@zepler.org>

	* skstream/skstream.cpp: It is not safe to assume the maximum
	  path length of a unix socket is 108. On OSX it is 104. On some
	  systems it is defined, on others we have to assume 104.

2007-04-12  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Clean up the way debian/rules permissions are set so
	  they cause less breakage.

2007-04-12  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Add a more detailed test so the inlined version